[package]
name = "havokmud_rust"
license = "MIT"
authors = ["Gavin Hurlbut <gjhurlbu@gmail.com>"]
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
ansi_term = "0.12"
aws-config = { version = "0.101.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "0.38.0"
bytes = "1.5"
config = "0.13"
directories = "4.0"
eosio = "0.3.1"
fancy-regex = "0.12"
lazy_static = "1.4"
log = "0.4"
minijinja = "1.0"
regex = "1.10"
serde = "1.0"
serde_cbor = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
simplelog = "0.12"
tokio-serde = { version = "0.8", features = ["json", "cbor"] }
tokio = { version = "1", features = ["full"] }
